<resources>
    <string name="app_name">Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="phone_number_username_or_email">Phone number, Username or Email</string>
</resources>