<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/instagram"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phone_number_username_or_email"
        android:textColorHint="@color/black"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button"
        android:maxLines="1"
        android:autofillHints=""
        android:layout_below="@id/textView1"
        android:textColor="#002944"
        android:backgroundTint="@color/gray"
        android:backgroundTintMode="screen"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/editTextTextPersonName"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="#002944"
        android:background="@drawable/button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:backgroundTintMode="screen"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:gravity="end"
        android:layout_below="@+id/editTextTextPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/log_in"
        android:layout_below="@id/forgotPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="screen"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:id="@+id/relativeLayout2"
        android:layout_marginTop="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@android:color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textSize="12sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/loginWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/log_in_with_facebook"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:layout_below="@+id/relativeLayout2" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@id/loginWithFacebook"
        android:id="@+id/horizontal"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/blue"/>

    </LinearLayout>

</RelativeLayout>